# macademia

./: .gitignore  CMakeLists.txt
macademia/: CMakeLists.txt
macademia/src/: application.h
macademia/src/macademia/: application.c  application.h  core.h  log.c  log.h
macademia/src/macademia/events/: event.c  event.h
sandbox/: CMakeLists.txt
sandbox/src/: main.c
